[tool.poetry]
name = "sementic-router"
version = "0.1.0"
description = ""
authors = ["grayroom <leejh9226@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
semantic-router = {extras = ["fastembed"], version = "^0.0.72"}
langchain = "^0.3.9"
langchain-openai = "^0.2.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
